<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivitySub4"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub4"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txtNumb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnPow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pow"
        android:layout_gravity="center"/>

</LinearLayout>