<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSub1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_1"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btnSub2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub2"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btnSub3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub3"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btnSub4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_receive_data"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/txtResolve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/_0_0"
        android:gravity="center"/>
    <Button
        android:id="@+id/btnOpenCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open Camera"
        android:layout_gravity="center"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imvPhoto"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="UselessLeaf">
        <Button
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Call"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            tools:ignore="ButtonStyle,HardcodedText" />
        <Button
            android:id="@+id/btnDial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dial"
            android:layout_gravity="center"
            tools:ignore="ButtonStyle,HardcodedText" />
    </LinearLayout>
</LinearLayout>